tests/snapshots/spec_samples__assert_cond_json.snap
---
source: tests/spec_samples.rs
expression: json
---
{
  "signal": [
    {
      "name": "clk",
      "wave": "PPPPPPPP"
    },
    {
      "name": "valid",
      "wave": "0.1...0."
    },
    {
      "data": [
        "0xAB"
      ],
      "name": "d_bus",
      "wave": "x.=...x."
    }
  ]
}
