tests/snapshots/spec_samples__complete_example.snap
---
source: tests/spec_samples.rs
expression: result
---
{
  "signal": [
    {
      "name": "sclk",
      "wave": "PPPPPPPP"
    },
    {
      "data": [
        "CMD",
        "DATA"
      ],
      "name": "mosi",
      "wave": "x=.=...x"
    },
    {
      "name": "cs_n",
      "wave": "10.....1"
    }
  ]
}
