tests/snapshots/spec_samples__const_basic.snap
---
source: tests/spec_samples.rs
expression: result
---
{
  "signal": [
    {
      "name": "clk",
      "wave": "PPPPPPPP"
    },
    {
      "name": "en",
      "wave": "0...1..."
    }
  ]
}
