tests/snapshots/spec_samples__falling_clock.snap
---
source: tests/spec_samples.rs
expression: result
---
{
  "signal": [
    {
      "name": "clk_p",
      "wave": "PPPPPPPP"
    },
    {
      "name": "clk_n",
      "wave": "NNNNNNNN"
    }
  ]
}
