tests/snapshots/spec_samples__include_basic.snap
---
source: tests/spec_samples.rs
expression: result
---
{
  "signal": [
    {
      "name": "clk",
      "wave": "PPPP"
    },
    {
      "name": "rstn",
      "wave": "01.."
    },
    {
      "data": [
        "A B C D"
      ],
      "name": "bus",
      "wave": "=..."
    }
  ]
}
