tests/snapshots/spec_samples__simple_spi.snap
---
source: tests/spec_samples.rs
expression: result
---
{
  "signal": [
    {
      "name": "sclk",
      "wave": "PPPPPPPP"
    },
    {
      "data": [
        "CMD",
        "DATA"
      ],
      "name": "mosi",
      "wave": "x=.=...x"
    },
    {
      "data": [
        "ACK",
        "0xFF"
      ],
      "name": "miso",
      "wave": "x=.=...x"
    },
    {
      "name": "cs_n",
      "wave": "10.....1"
    }
  ]
}
